--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,12 @@ p {
     padding-top: 10px;
 }
 
+section#atuacao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 h2 {
     width: 88px;
     font-weight: bold;
@@ -85,6 +91,10 @@ img.version {
 
 div.act {
     margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 img.destination {
@@ -97,6 +107,13 @@ img.progress {
     height: 276px;
 }
 
+section#membros {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 img.meet {
     width: 352px;
     height: 209px;
@@ -106,6 +123,10 @@ div.red {
     background-color: #FA5453;
     width: 100%;
     margin-top: 65px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h2.white {
@@ -127,12 +148,23 @@ p.white {
     margin-top: 25px;
 }
 
+div.pessoas {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 div.card {
     width: 346px;
     background: #FFFFFF;
     border-radius: 8px;
     margin-top: 35px;
     padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 img.photo {
