--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ div.red {
     background-color: #FA5453;
     width: 100%;
     margin-top: 65px;
+    padding-bottom: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
