--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ header img {
 header {
     height: 60px;
     width: 100%;
+    background-color: #ffffff;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.10);
     position: fixed;
     z-index: 3;
