--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Raleway', sans-serif;
+    background-color: #fff;
 }
 
 header img {
@@ -20,7 +21,7 @@ header img {
 header {
     height: 60px;
     width: 100%;
-    background-color: #ffffff;
+    background-color: #fff;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.10);
     position: fixed;
     z-index: 3;
@@ -138,23 +139,23 @@ header {
   
 .nav-collapse a {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
-    border-top: 1px solid #1b8aa5;
+    border-top: 1px solid #dddedf;
     text-decoration: none;
-    background: #023670;
+    background: #fff;
     padding: 1.7em 1em;
-    color: #fff;
+    color: #FA5453;
     width: 100%;
     float: left;
 }
   
 .nav-collapse a:active,
 .nav-collapse .active a {
-    background: #023670;
+    background: #fff;
 }
   
 @media screen and (min-width: 40em) {
     .nav-collapse a {
-      border-left: 1px solid #1b8aa5;
+      border-left: 1px solid #e2e1e1;
       padding: 1.02em 2em;
       text-align: center;
       border-top: 0;
@@ -203,8 +204,8 @@ header {
 }
   
 .nav-toggle:before {
-    color: #fff; /* Edit this to change the icon color */
-    font: normal 28px/55px "responsivenav"; /* Edit font-size (28px) to change the icon size */
+    color: #FA5453; /* Edit this to change the icon color */
+    font: normal 60px/60px "responsivenav"; /* Edit font-size (28px) to change the icon size */
     text-transform: none;
     text-align: center;
     position: absolute;
@@ -218,7 +219,7 @@ header {
   
 .nav-toggle.active:before {
     font-size: 24px;
-    content: "\78"; /* Close icon */
+    content: "x"; /* Close icon */
 }
 
 section#home {
