--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -287,6 +291,11 @@ button {
     color: white;
     box-shadow: none;
     border-style: none;
+    transition: filter 0.2s;
+}
+
+button:hover {
+    filter: brightness(90%);
 }
 
 img.version {
