--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ button {
 
 button:hover {
     filter: brightness(90%);
+    cursor: pointer;
 }
 
 img.version {
@@ -428,6 +429,11 @@ ul.social li a {
     padding: 5px 15px;
     font-size: 20px;
     color: #ffffff;
+    transition: color 0.4s;
+}
+
+ul.social li a:hover {
+    color: #DA0504;
 }
 
 section#contato {
@@ -452,6 +458,11 @@ p.assinatura {
 p.assinatura a {
     text-decoration: none;
     color: #868585;
+    transition: filter 0.4s;
+}
+
+p.assinatura a:hover {
+    filter: brightness(50%);
 }
 
 img.assinatura {
@@ -468,4 +479,42 @@ div.black {
     height: 205px;
     width: 100%;
     background-color: #3D3939;
+}
+
+.w3-modal {
+    z-index:3;
+    display:none;
+    padding-top:100px;
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    overflow:auto;
+    background-color:rgb(0,0,0);
+    background-color:rgba(0,0,0,0.4)
+}
+
+.w3-modal-content {
+    margin:auto; 
+    background-color:#fff;
+    border-radius: 8px;
+    position:relative;
+    padding:30px;
+    outline:0;
+    width:300px;
+    transition: display .02s;
+}
+
+.w3-container {
+    text-align: center;
+    color: #868585;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    width: 200px;
+}
+
+.w3-container p {
+    width: 250px;
 }
